--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,10 @@
-<!<!DOCTYPE html>
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
-    <<p>Welcome to the chat app</p>
+    <p>Welcome to the chat app</p>
   </body>
 </html>
